Fix overflow bug in SavePlaylist view
Fixed Sass styling by using overflow scroll.
Also fixed buttonContainerStyling mixin.
SavePlaylist view still needs to be fixed.

--- a/dev/sass/base/_mixins.scss
+++ b/dev/sass/base/_mixins.scss
@@ -32,8 +32,8 @@
   }
 }
 
-@mixin buttonContainerStyling($marginTop: 5em, $marginBottom: 5em) {
-  height: 20%;
+@mixin buttonContainerStyling($marginTop: 5em, $marginBottom: 5em, $height: 20%) {
+  height: $height;
   margin-top: $marginTop;
   margin-bottom: $marginBottom;
   display: flex;
